signature for main report steps changed